# NHA-4-128

./: .gitignore  DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  Project_milestones.xlsx  QUICK_START.md  README.md  README_chatbot (1).md  Untitled.ipynb  agent.py  build_kb.py  five_sample_patients_with_features.xlsx  image_registry.py  main.py  modeling-dataset1.ipynb  pyproject.toml  rag.py  requirements.txt
Notebooks/: Modeling-merged-data.ipynb  unet-model.ipynb
Segmentation/: README.md  main.py  requirements.txt
Segmentation/src/: config.py  metrices.py  train.py  visuals.py
app/: __init__.py  configs.py  main.py  models.py  storage.py
app/.ipynb_checkpoints/: __init__-checkpoint.py  main-checkpoint.py
app/core/: preprocessing.py
app/services/: predictor.py  routing.py  segmenter.py
backend_&MLflow/: DOCUMENTATION.md  README.md
backend_&MLflow/Segmentation/: README.md  main.py  requirements.txt
backend_&MLflow/app/: storage.py
chat_bot/: agent.py
data/: extract_global_features.py  five_sample_patients.xlsx
data/kb/: 06_image_and_dataset_info.md
dermascan_app/: .gitignore  IMAGE_ANALYSIS_GUIDE.md  README.md  agent.py  image_downloader.py  image_registry.py  main.py  patient_storage.py  rag.py  requirements.txt  vision_analyzer.py
dermascan_app/data/: updated_file_2.xlsx
forproduction/: .gitattributes  .gitignore  README.md  requirements.txt
melanoma-classification/: .gitignore  README.md  main.py  requirements.txt
mini_API/: test.py
mlflow/: mlflow.db
notebook/: classificaion.ipynb
static/: index.html
(+55 files in other folders)
