[project]
name = "dermascan"
version = "0.1.0"
description = "DermaScan AI — Skin Cancer Detection and RAG Chatbot"
requires-python = ">=3.10,<3.11"

dependencies = [
    # Web UI
    "streamlit==1.35.0",

    # Deep Learning — tensorflow 2.13 needs protobuf 3.20.x
    "tensorflow==2.13.0",
    "protobuf==3.20.3",

    # Image processing
    "opencv-python==4.8.1.78",
    "pillow==10.4.0",
    "numpy==1.24.3",

    # LangChain ecosystem
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-groq==0.1.9",
    "langchain-huggingface==0.0.3",
    "langchain-text-splitters==0.2.4",
    "langgraph==0.2.4",

    # Vector store — FAISS instead of Chroma (no protobuf conflict)
    "faiss-cpu==1.8.0",

    # Embeddings
    "sentence-transformers==2.7.0",

    # Data
    "pandas==2.1.4",
    "openpyxl==3.1.2",

    # Utils
    "python-dotenv==1.0.0",
]
